# dds_poc

./: CMakeLists.txt  main_client.cpp  main_server.cpp
idl/: GetControlValueReq.idl  GetControlValueRes.idl
